tests/snapshots/multiline__multiline_border@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --border"
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│  c                                                                           │"
"│  b1                                                                          │"
"│  b2                                                                          │"
"│> a                                                                           │"
"┌  3/3──────────────────────────────────────────────────────────────────────0/0┐"
"│>                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
cursor: (23, 4)
