tests/snapshots/multiline__multiline_custom_sep_colon@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"key:value:extra\", \"z\"]\noptions: --multiline :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  z                                                                             "
"  key                                                                           "
"  value                                                                         "
"  extra                                                                         "
"> a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
