tests/snapshots/multiline__multiline_custom_sep_comma@001.snap
---
source: tests/multiline.rs
description: "input: items [\"x\", \"p,q,r\", \"y\"]\noptions: --multiline ,"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  y                                                                             "
"  p                                                                             "
"  q                                                                             "
"  r                                                                             "
"> x                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
