tests/snapshots/multiline__multiline_cycle@002.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --cycle\nafter:\n  @key Down"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"  a                                                                             "
"  3/3                                                                        2/0"
">                                                                               "
cursor: (24, 3)
