tests/snapshots/multiline__multiline_empty_segment@001.snap
---
source: tests/multiline.rs
description: "input: items [\"before\\\\n\\\\nafter\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> before                                                                        "
"                                                                                "
"  after                                                                         "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
