tests/snapshots/multiline__multiline_header_lines@001.snap
---
source: tests/multiline.rs
description: "input: items [\"h1\\\\nh2\", \"a1\\\\na2\", \"b1\\\\nb2\"]\noptions: --multiline --header-lines 1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b1                                                                            "
"  b2                                                                            "
"> a1                                                                            "
"  a2                                                                            "
"  h1                                                                            "
"  h2                                                                            "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
