tests/snapshots/multiline__multiline_layout_reverse@002.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --layout reverse\nafter:\n  @key Down"
---
">                                                                               "
"  3/3                                                                        1/0"
"  a                                                                             "
"> b1                                                                            "
"  b2                                                                            "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (1, 3)
